# bios-settings-mgr

./: .clang-format  .gitignore  CMakeLists.txt  MAINTAINERS  OWNERS  README.md  bios-configd.service  groups  main.cpp  manager.cpp  manager.hpp  meson.build  meson.options  meson_options.txt  project.config
include/: BIOSConfigManager.hpp  bootorder.hpp  config.hpp  manager.hpp  manager_serialize.hpp  password.hpp  secureboot.hpp
service_files/: xyz.openbmc_project.biosconfig_manager.service  xyz.openbmc_project.biosconfig_password.service
src/: BIOSConfigManager.cpp  bootorder.cpp  main.cpp  manager.cpp  manager_serialize.cpp  password.cpp  secureboot.cpp
subprojects/: nlohmann-json.wrap  phosphor-dbus-interfaces.wrap  sdbusplus.wrap
